<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/grey_2"
        android:paddingStart="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thong_bao_2"
            android:textSize="24sp"
            android:textColor="@color/grey"
            android:layout_marginEnd="60dp"/>

        <TextView
            android:id="@+id/clear_all_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_all"
            android:textColor="@color/orange_2"
            android:textStyle="bold"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_ex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mua ngay"
        android:layout_gravity="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"/>

    <Button
        android:id="@+id/btn_notification"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/thong_bao" />
</LinearLayout>