<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ff_1">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardBr"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-40dp"
        app:cardCornerRadius="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_account_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cre_acc"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:paddingTop="10dp"
                />

            <EditText
                android:id="@+id/name_regis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ed_name"
                android:minHeight="48dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password_regis"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:hint="@string/ed_pass"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/repass_regis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:hint="Repassword"
                android:minHeight="48dp"
                android:singleLine="true"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resgister"
                android:textSize="18sp"
                />

            <Button
                android:id="@+id/btn_login_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="Login now!!!"
                android:backgroundTint="@color/orange_2"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>